# cargo_app

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
migrations/: env.py
src/: created_keys.py  main.py
src/admin/: api.py  service.py
src/auth/: api.py  dependencies.py  jwt.py  models.py  schemas.py  security.py  service.py
src/core/: config.py
src/db/: db.py  db_manager.py  repository.py
src/drivers/: api.py  models.py  repository.py  schemas.py  service.py
src/orders/: api.py  models.py  repository.py  schemas.py  service.py
src/users/: api.py  models.py  repository.py  schemas.py  service.py
